[project]
  name = "pulumiverse_sentry"
  description = "A Pulumi package for creating and managing Sentry resources."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1", "typing-extensions>=4.11; python_version < \"3.11\""]
  keywords = ["pulumi", "sentry", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.8"
  version = "0.0.0a0+dev"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://github.com/pulumiverse"
    Repository = "https://github.com/pulumiverse/pulumi-sentry"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumiverse_sentry = ["py.typed", "pulumi-plugin.json"]
